--- a/app/src/main/res/layout/activity_job_info.xml
+++ b/app/src/main/res/layout/activity_job_info.xml
@@ -263,7 +263,7 @@
                     android:layout_height="40dp"
                     android:layout_marginTop="16dp"
                     android:layout_marginBottom="32dp"
-                    android:background="@drawable/btn_bg"
+                    android:background="@drawable/shape_blue2"
                     android:gravity="center"
                     android:text="@string/btn_continue"
                     android:textColor="@color/white"
